bash/error/.ipynb_checkpoints/val-checkpoint.err
  File "/hpc/home/csr33/ast_object_detection/src/val.py", line 11
    parser.add_argument("--model_path", type=str, help "path to training weights for trained model")
                                                                                                   ^
SyntaxError: positional argument follows keyword argument
